--- a/next-js/src/styles/globals.css
+++ b/next-js/src/styles/globals.css
@@ -8,7 +8,11 @@
 # 05fc9d
  */
 
-.neonText {
+.sidebar-height {
+  height: calc(100vh - 64px);
+}
+
+.neon-text {
   color: #fff;
   text-shadow: 0 0 7px #bc13fe, 0 0 10px #bc13fe, 0 0 21px #bc13fe,
     0 0 42px #bc13fe, 0 0 82px #bc13fe, 0 0 92px #bc13fe, 0 0 102px #bc13fe,
@@ -17,7 +21,7 @@
   padding: 0.4em;
 }
 
-.neonButton {
+.neon-button {
   color: #fff;
   text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #bc13fe,
     0 0 82px #bc13fe, 0 0 92px #bc13fe, 0 0 102px #bc13fe, 0 0 151px #bc13fe;
