--- a/next-js/src/styles/globals.css
+++ b/next-js/src/styles/globals.css
@@ -33,6 +33,14 @@
     inset 0 0 0.8rem #bc13fe, inset 0 0 1rem #bc13fe, inset 0 0 1.2rem #bc13fe;
 }
 
+.neon-hover-animation:hover {
+  color: #fff;
+  text-shadow: 0 0 7px #bc13fe, 0 0 10px #bc13fe, 0 0 21px #bc13fe,
+    0 0 42px #bc13fe, 0 0 82px #bc13fe, 0 0 92px #bc13fe, 0 0 102px #bc13fe,
+    0 0 151px #bc13fe;
+  animation: text-pulsate 1.5s infinite alternate;
+}
+
 body {
   font-family: "Sacramento", sans-serif;
 }
