--- a/next-js/src/styles/globals.css
+++ b/next-js/src/styles/globals.css
@@ -33,11 +33,9 @@
     inset 0 0 0.8rem #bc13fe, inset 0 0 1rem #bc13fe, inset 0 0 1.2rem #bc13fe;
 }
 
+/* Has lower intensity of shadow compared to neon-text */
 .neon-hover-animation:hover {
   color: #fff;
-  text-shadow: 0 0 7px #bc13fe, 0 0 10px #bc13fe, 0 0 21px #bc13fe,
-    0 0 42px #bc13fe, 0 0 82px #bc13fe, 0 0 92px #bc13fe, 0 0 102px #bc13fe,
-    0 0 151px #bc13fe;
   animation: text-pulsate 1.5s infinite alternate;
 }
 
@@ -51,10 +49,10 @@ body {
       0 0 80px #bc13fe, 0 0 90px #bc13fe, 0 0 100px #bc13fe, 0 0 150px #bc13fe;
   }
 
-  0% {
-    text-shadow: 0 0 2px #fff, 0 0 4px #fff, 0 0 6px #fff, 0 0 10px #bc13fe,
-      0 0 45px #bc13fe, 0 0 55px #bc13fe, 0 0 70px #bc13fe, 0 0 80px #bc13fe;
-  }
+  /* 0% {
+    text-shadow: 0 0 0px #fff, 0 0 2px #fff, 0 0 4px #fff, 0 0 8px #bc13fe,
+      0 0 16px #bc13fe, 0 0 32px #bc13fe, 0 0 64px #bc13fe, 0 0 128px #bc13fe;
+  } */
 }
 
 @keyframes box-pulsate {
