--- a/next-js/src/components/snackbar/snackbar.css
+++ b/next-js/src/components/snackbar/snackbar.css
@@ -1,5 +1,5 @@
 .snackbar__container {
-  position: fixed;
+  position: absolute;
   bottom: 1rem;
   right: 1rem;
   display: flex;
@@ -7,7 +7,7 @@
   justify-content: center;
   background: #323232;
   color: #fff;
-  z-index: 10;
+  z-index: 40;
   margin: 16px;
   border-radius: 4px;
   min-width: 244px;
