--- a/services/auth/app/public/login.tmpl
+++ b/services/auth/app/public/login.tmpl
@@ -14,8 +14,8 @@
         <h1>Login In</h1>
         <form action="/login" method="POST">
             <div class="form-group">
-                <label for="username">User Name</label>
-                <input type="text" class="form-control" name="username" required placeholder="Please enter your user name">
+                <label for="username">Email</label>
+                <input type="text" class="form-control" name="email" required placeholder="Please enter your email">
             </div>
             <div class="form-group">
                 <label for="password">Password</label>
@@ -23,6 +23,9 @@
             </div>
             <button type="submit" class="btn btn-success">Login</button>
         </form>
+    </div>
+    <div style="color:red;">
+        {{.errorMsg}}
     </div>
 </body>
 
