--- a/auth/app/template/register.tmpl
+++ b/auth/app/template/register.tmpl
@@ -13,36 +13,51 @@
     <div class="grid h-full w-full absolute place-items-center">
         <div class="text-slate-100 rounded-lg p-4 shadow-lg border border-slate-100/20 max-w-[20rem] w-full">
             <p class="text-xl">Register</p>
-            
 
             <form action="/register" method="POST">
-                <div class="mt-6">
-                    <label class="block" for="nickname">Nickname</label>
+                <p class="text-lg mt-6">Group</p>
+                 <div>
+                    <label class="block" for="email">Group name *</label>
                     <input 
-                        id="nickname"
+                        id="group_name"
                         type="text" 
-                        name="nickname" 
-                        class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none" placeholder="you@example.com"
+                        name="group_name" 
+                        class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none" 
+                        placeholder="MyCompany inc."
+                        minlength="3" maxlength="50" required
+                    >
+                </div>
+                <p class="text-lg mt-6">Account</p>
+                <div>
+                    <label class="block" for="nickname">Nickname *</label>
+                    <input 
+                        id="admin_nickname"
+                        type="text" 
+                        name="admin_nickname" 
+                        class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none" 
+                        placeholder="Admin"
                         minlength="3" maxlength="25" required
                     >
                 </div>
                 <div class="mt-6">
-                    <label class="block" for="email">Email</label>
+                    <label class="block" for="admin_email">Email *</label>
                     <input 
-                        id="email"
+                        id="admin_email"
                         type="email" 
-                        name="email" 
-                        class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none" placeholder="you@example.com"
+                        name="admin_email" 
+                        class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none" 
+                        placeholder="Nickname"
                         minlength="6" maxlength="100" required
                     >
                 </div>
                 <div class="mt-6">
-                    <label class="block" for="password">Password</label>
+                    <label class="block" for="password">Password *</label>
                     <input 
-                        id="password"
+                        id="admin_password"
                         type="password" 
-                        name="password" 
-                        class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none" placeholder="you@example.com"
+                        name="admin_password" 
+                        class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none" 
+                        placeholder="Password"
                         minlength="6" maxlength="50" required
                     >
                 </div>
