--- a/auth/app/template/sign_in.tmpl
+++ b/auth/app/template/sign_in.tmpl
@@ -16,22 +16,24 @@
 
             <form action="/signin" method="POST">
                 <div class="mt-6">
-                    <label class="block" for="email">Email</label>
+                    <label class="block" for="email">Email *</label>
                     <input 
                         id="email"
                         type="email" 
                         name="email" 
-                        class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none" placeholder="you@example.com"
+                        class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none" 
+                        placeholder="Email"
                         minlength="6" maxlength="100" required
                     >
                 </div>
                 <div class="mt-6">
-                    <label class="block" for="password">Password</label>
+                    <label class="block" for="password">Password *</label>
                     <input 
                         id="password"
                         type="password" 
                         name="password" 
-                        class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none" placeholder="you@example.com"
+                        class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none" 
+                        placeholder="Password"
                         minlength="6" maxlength="50" required
                     >
                 </div>
