--- a/auth/app/web/template/authorize.html
+++ b/auth/app/web/template/authorize.html
@@ -12,7 +12,7 @@
 <body class="bg-slate-800">
   <div class="grid h-full w-full absolute place-items-center">
     <div class="text-slate-100 rounded-lg p-4 shadow-lg border border-slate-100/20 max-w-[20rem] w-full">
-      <form action="/api/oauth/authorize" method="POST">
+      <form action="/oauth/authorize" method="POST">
         <p class="text-xl">Authorize</p>
         <p class="text-md">This will allow Invman to:</p>
 
