--- a/auth/app/web/template/signin.html
+++ b/auth/app/web/template/signin.html
@@ -45,7 +45,7 @@
         form.addEventListener("submit", async (event) => {
             event.preventDefault();
 
-            fetch("/api/signin", {
+            fetch("/signin", {
                 method: "POST",
                 mode: "same-origin",
                 headers: {
