--- a/auth/app/web/template/signup.html
+++ b/auth/app/web/template/signup.html
@@ -55,7 +55,7 @@
         form.addEventListener("submit", async (event) => {
             event.preventDefault();
 
-            fetch("/api/signup", {
+            fetch("/signup", {
                 method: "POST",
                 mode: "same-origin",
                 headers: {
