--- a/auth/app/web/template/signup.html
+++ b/auth/app/web/template/signup.html
@@ -1,91 +1,74 @@
-<!DOCTYPE html>
-<html lang="en">
+{{ template "header.html" . }}
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+<form action="/signup" method="POST">
+    <div>
+        <label class="block" for="username">Username *</label>
+        <input id="username" type="text" name="username"
+            class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none"
+            placeholder="Username" minlength="3" maxlength="20" required>
+    </div>
+    <div class="mt-6">
+        <label class="block" for="email">Email *</label>
+        <input id="email" type="email" name="email"
+            class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none"
+            placeholder="Email" maxlength="50" required>
+    </div>
+    <div class="mt-6">
+        <label class="block" for="password">Password *</label>
+        <input id="password" type="password" name="password"
+            class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none"
+            placeholder="Password" minlength="6" maxlength="50" required>
+    </div>
+    <p id="err" class="my-6 text-red-700"></p>
+    <div class="flex items-center">
+        <button type="submit"
+            class="mr-1 w-full p-2 bg-indigo-500 text-slate-100 rounded-md flex items-center justify-center min-h-8 h-full">Sign
+            up</button>
+        <button type="button"
+            class="ml-1 w-full p-2 bg-gray-500 text-slate-100 rounded-md flex items-center justify-center min-h-8 h-full"
+            onclick="window.history.back()">Go back</button>
 
-    <title>Register</title>
-</head>
-
-<body class="bg-slate-800">
-    <div class="grid h-full w-full absolute place-items-center">
-        <div class="text-slate-100 rounded-lg p-4 shadow-lg border border-slate-100/20 max-w-[20rem] w-full">
-            <p class="text-xl">Sign up</p>
-
-            <form action="/signup" method="POST">
-                <div class="mt-6">
-                    <label class="block" for="username">Username *</label>
-                    <input id="username" type="text" name="username"
-                        class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none"
-                        placeholder="Username" minlength="3" maxlength="20" required>
-                </div>
-                <div class="mt-6">
-                    <label class="block" for="email">Email *</label>
-                    <input id="email" type="email" name="email"
-                        class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none"
-                        placeholder="Email" maxlength="50" required>
-                </div>
-                <div class="mt-6">
-                    <label class="block" for="password">Password *</label>
-                    <input id="password" type="password" name="password"
-                        class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none"
-                        placeholder="Password" minlength="6" maxlength="50" required>
-                </div>
-                <p id="err" class="my-6 text-red-700"></p>
-                <div class="flex items-center">
-                    <button type="submit"
-                        class="mr-1 w-full p-2 bg-indigo-500 text-slate-100 rounded-md flex items-center justify-center min-h-8 h-full">Sign
-                        up</button>
-                    <button type="button"
-                        class="ml-1 w-full p-2 bg-gray-500 text-slate-100 rounded-md flex items-center justify-center min-h-8 h-full"
-                        onclick="window.history.back()">Go back</button>
-
-                </div>
-
-            </form>
-        </div>
     </div>
 
-    <script>
-        const err = document.getElementById("err");
-        const form = document.querySelector("form");
+</form>
 
-        form.addEventListener("submit", async (event) => {
-            event.preventDefault();
+{{ template "footer.html" . }}
 
-            fetch("/signup", {
-                method: "POST",
-                mode: "same-origin",
-                headers: {
-                    "Content-Type": "application/x-www-form-urlencoded",
-                },
-                // referrerPolicy: "same-origin",
-                body: new URLSearchParams(new FormData(form)),
-            }).then((res) => {
-                if (res.redirected) {
-                    window.location.href = res.url;
-                    return
-                }
+<script>
+    const err = document.getElementById("err");
+    const form = document.querySelector("form");
 
-                if (!res.ok) {
-                    res.json().then((data) => {
-                        displayError(data.message);
-                    }).catch(() => {
-                        displayError("Something went wrong");
-                    })
-                }
-            }).catch((err) => {
-                displayError("Something went wrong");
-            });
+    form.addEventListener("submit", async (event) => {
+        event.preventDefault();
+
+        fetch("/signup", {
+            method: "POST",
+            mode: "same-origin",
+            headers: {
+                "Content-Type": "application/x-www-form-urlencoded",
+            },
+            // referrerPolicy: "same-origin",
+            body: new URLSearchParams(new FormData(form)),
+        }).then((res) => {
+            if (res.redirected) {
+                window.location.href = res.url;
+                return
+            }
+
+            if (!res.ok) {
+                res.json().then((data) => {
+                    displayError(data.message);
+                }).catch(() => {
+                    displayError("Something went wrong");
+                })
+            }
+        }).catch((err) => {
+            displayError("Something went wrong");
         });
+    });
 
-        function displayError(msg) {
-            err.textContent = msg;
-        }
+    function displayError(msg) {
+        err.textContent = msg;
+    }
 
-    </script>
-</body>
-
-</html>
+</script>
