--- a/app/src/app/global.css
+++ b/app/src/app/global.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.glass {
+    background: rgba(255, 255, 255, 0.1);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+}
+
+ul li.glass:hover {
+    box-shadow: inset 0 0 2em rgba(255, 255, 255, 0.1);
+}
