reset password sort of works

--- a/auth/app/web/template/forgot_password.html
+++ b/auth/app/web/template/forgot_password.html
@@ -2,30 +2,21 @@
 
 <form>
     <div>
-        <label class="block" for="email">Email *</label>
-        <input id="email" type="email" name="email"
-            class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none"
-            placeholder="Email" minlength="6" maxlength="100" required>
-    </div>
-    <div class="mt-6">
-        <label class="block" for="password">Password *</label>
+        <label class="block" for="email">Password *</label>
         <input id="password" type="password" name="password"
             class="p-2 border shadow-sm text-black border-slate-300 placeholder-slate-400 disabled:bg-slate-50 disabled:text-slate-500 disabled:border-slate-200 focus:outline-none focus:border-indigo-500 focus:ring-indigo-500 block w-full rounded-md sm:text-sm focus:ring-1 invalid:border-pink-500 invalid:text-pink-600 focus:invalid:border-pink-500 focus:invalid:ring-pink-500 disabled:shadow-none"
-            placeholder="Password" minlength="6" maxlength="50" required>
+            placeholder="New password" minlength="6" maxlength="50" required>
     </div>
     <p id="err" class="my-6 text-red-700"></p>
-    <button type="submit"
-        class="w-full p-2 bg-indigo-500 text-slate-100 rounded-md flex items-center justify-center min-h-8 h-full">Sign
-        in</button>
-    <br>
     <div class="flex items-center">
-        No account?
-        <a href="/signup" class="ml-2 p-2 text-indigo-500 underline">Sign up</a>
+        <button type="submit"
+            class="mr-1 w-full p-2 bg-indigo-500 text-slate-100 rounded-md flex items-center justify-center min-h-8 h-full">Reset</button>
+        <button type="button"
+            class="ml-1 w-full p-2 bg-gray-500 text-slate-100 rounded-md flex items-center justify-center min-h-8 h-full"
+            onclick="window.history.back()">Go back</button>
+
     </div>
-    <div class="flex items-center">
-        Forgot password?
-        <a href="/forgot/password/request" class="ml-2 p-2 text-indigo-500 underline">Forgot</a>
-    </div>
+
 </form>
 
 {{ template "footer.html" . }}
@@ -37,7 +28,10 @@
     form.addEventListener("submit", async (event) => {
         event.preventDefault();
 
-        fetch("/signin", {
+        let params = new URLSearchParams(document.location.search);
+        let token = params.get("token");
+
+        fetch("/forgot/password?token=" + token, {
             method: "POST",
             mode: "same-origin",
             headers: {
@@ -64,7 +58,7 @@
     });
 
     function displayError(msg) {
-        err.innerHTML = msg;
+        err.textContent = msg;
     }
 
 </script>
