continued with diary

--- a/app/src/app/global.css
+++ b/app/src/app/global.css
@@ -3,11 +3,21 @@
 @tailwind utilities;
 
 .glass {
-    background: rgba(255, 255, 255, 0.1);
+    background: rgba(255, 255, 255, 0.2);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.glass-dense {
+    background: rgba(255, 255, 255, 0.4);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(5px);
+    -webkit-backdrop-filter: blur(5px);
+    border: 1px solid rgba(255, 255, 255, 0.3);
 }
 
 ul li.glass:hover {
-    box-shadow: inset 0 0 2em rgba(255, 255, 255, 0.1);
+    box-shadow: inset 0 0 2em rgba(255, 255, 255, 0.3);
 }
