--- a/app/src/app/layout.css
+++ b/app/src/app/layout.css
@@ -14,3 +14,9 @@ html.dark {
 html.light {
     background-image: linear-gradient(to top right, #0f0c290c, #0f0c2913, #0f0c290c);
 }
+
+.glass {
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.05);
+    backdrop-filter: blur(5px);
+}
